0.9.4 - in development
----------------------
 * qlog:
    * The graph is now not hidden when you search.
    * Improved graph layout.
    * The graph now shows lines for sprouts and roots.
    
0.9.3 - 2008-08-19
----------------------
Maintenance release:

 * qcommit:
    * Double-click on pending merge show changes properly (#252879).
    * Better support for compiz (#245419).
    * New command-line options: --local and --message (#253613).
 * qdiff: 
    * Added a refresh button (#252191).
    * Workaround for random segfault of qdiff due the bug in bzrlib's
      C implementation of patience diff sequence matcher.
    * Show x-bit (+x) property for added/removed files in side-by-side view.
 * qlog: 
    * When you search on revision id or revision number, it selects the
      revision that matches, rather than filtering the ones that don't. 
      This also faster.
    * New revision details view.
    * Fixed problem with showing merges for some branches (#255265).
    * Support for Redmine bug URLs.
 * merge --qpreview:
    * workaround for bug in bzrlib's PreviewTree related to renamed files
      (#251537).
 * qpull/qbranch:
    * Better detection of bzr executable for the case of standalone bzr.exe
      (#256793).
 * New translations: Dutch, French, Italian, Japanese

Launchpad Translations service re-enabled for translations of QBzr strings.

NOTES: when upgrading old installation (<0.9.2) of QBzr to 0.9.3, 
please uninstall or remove old files first.


0.9.2 - 2008-07-22
----------------------
This release is first step towards QBzr 1.0.

In this release QBzr introduce new qlog view with nice graph of revisions.
qcat window now allow you to see images as images, binary files as hex dump,
and target for versioned symlink. Side-by-side diff now able to show changes 
in image files; side-by-side and unidiff will show you changes in executable 
bit as well. Also you can specify in command line which files 